Fix site branding spacing

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -48,7 +48,7 @@
 
 .site-branding {
   float: left;
-  margin-top: 0;
+  margin-top: 3px;
   margin-left: 10px;
   .logo {
     color: #fff;
@@ -237,7 +237,13 @@
     padding-top: 30px;
   }
   .site-branding {
-    margin-top: 6px;
+    margin-top: 20px;
     margin-left: 0;
+  }
+
+  .navbar-solid { 
+    .site-branding {
+      margin-top: 25px;
+    }
   }
 }
